appId: do.mikro.app
---
- runFlow: subflows/unlock.yaml
- tapOn: "Buscar"
- tapOn:
    id: "search-input"
- inputText: "Juan"
- tapOn: "Buscar cliente"
- extendedWaitUntil:
    visible:
      id: "customer-c1"
    timeout: 5000
- assertVisible:
    id: "customer-c1"
